samples/_failures_safe/1760888562_542236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8433934e.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
